Revert "Revert collect(Collectors.toList())"